2A/05_Projet_GL/src/test/deca/context/invalid/complet/49_casting_str_int.deca
// Description :
//   casting : string --> int 
// Resultats :
//    ligne 9 :  casting entre 'int' et 'string' n'est pas possible
// Historique :
//  cree le 16/01/2024

{
    (int)("1");
}